# contest

data/: pdf_hashes.json  pdf_index.json  pdf_metadata.json
data/chroma_db/: chroma.sqlite3
data/chroma_db/c86358c0-25af-41e6-a543-9f4643e66990/: index_metadata.pickle
my-ollama-chatbot/: app.py  main.py  pyproject.toml  requirements.txt
my-ollama-chatbot/multi_agent_chatbot/: agent_logic.py  app.py  image_handler.py  llm_config.py  main.py  rag_handler.py  utils.py  web_search.py
